--- a/intex.html
+++ b/intex.html
@@ -1,5 +1,3 @@
-<html lang="pt-BR">
-
 <head>
     <link rel="stylesheet" href="styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com"&gt;
@@ -7,11 +5,11 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Chakra+Petch:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&display=swap&quot;
         rel="stylesheet">
-    <title>MARIAflix</title>
+    <title>Tatiflix</title>
 </head>
 
 <body>
-    <header>MARIAflix</header>
+    <header>Tatiflix</header>
 
     <section class="chamada">
         <div class="chamada-texto">
